# wrapper-accounting-simulation

./: pyproject.toml  readme.md
contracts/: lido.py  vault.py  wrapper_a.py  wrapper_b.py  wrapper_minting.py  wrapper_pool.py
scripts/: minting_user_rebalance.py  minting_vault_rebalance_basic.py  minting_vault_rebalance_withdraw.py  minting_vault_transferred_debt.py  pool_shared_debt.py
scripts/utils/: formatting.py  print.py  print_users_minting.py  print_users_pool.py
test/scenario/: test_minting_user_rebalance.py  test_minting_vault_extra_debt.py  test_minting_vault_rebalance.py
test/unit/: test_minting_burn_basic.py  test_minting_collateral.py  test_minting_debt_settlement.py  test_minting_mint_basic.py  test_minting_rebalance.py  test_pool_stake_basic.py  test_pool_stake_users.py  test_pool_withdraw.py
