[tool.poetry]
name = "vault-wrapper-rebalance"
version = "0.1.0"
description = "Vault wrapper rebalance project"
authors = ["George <mail@sjors.ru>"]
packages = [{ include = "contracts" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^24.3.0"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
